# WirelessPrinting

./: .gitignore  .travis.yml  CMakeLists.txt  DiscoverWirelessPrintAction.py  DiscoverWirelessPrintAction.qml  README.md  WirelessPrintComponents.qml  WirelessPrintOutputDevice.py  WirelessPrintOutputDevicePlugin.py  WirelessPrinting.code-workspace  __init__.py  index.htm  library.properties  platformio.ini  sdkconfig.defaults  sh.exe.stackdump
.github/workflows/: build.yml  pio.yml  platformio.yml
ESP8266WirelessPrint/: ESP8266WirelessPrint.ino  IniFile.cpp  IniFile.h  README.md
ESP8266WirelessPrintAsync/: CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  ESP8266WirelessPrintAsync.ino  FileWrapper.cpp  FileWrapper.h  README.md  StorageFS.cpp  StorageFS.h  USBSerial.cpp  USBSerial.h
client/: wirelessprinting
components/usb_host_cdc_acm/: CHANGELOG.md  cdc_acm_host.c  idf_component.yml
components/usb_host_cdc_acm/test/: usb_device.c
components/usb_host_cp210x_vcp/: CMakeLists.txt
components/usb_host_vcp/: CMakeLists.txt  idf_component.yml
components/usb_host_vcp/include/usb/: vcp.hpp
examples/starter/: starter.ino
lib/gcode/: GCode.cpp  GCode.h
src/: StorageFS.cpp  StorageFS.h  WirelessPrinting.cpp  WirelessPrinting.h
test/: test_gcode.cpp
webflasher/bin_files/ESP32/: manifestESP32.json
webflasher/bin_files/NodeMCU/: manifestNodeMCU.json
webflasher/bin_files/WemosD1/: manifestD1.json
webflasher/web_tools/: connect-bbfe2ad0.js  index-934c34c7.js  install-button.js
